--- a/src/Component/Navigation/Navigation.module.css
+++ b/src/Component/Navigation/Navigation.module.css
@@ -1,40 +1,27 @@
 
-.list::-webkit-scrollbar {
-    display: none;
+.list{
+    position: absolute !important;
+            right: -20px;
+            bottom: 0;
+            display: flex;
+    
+            overflow: hidden;
 }
 
 
 .item{
-    margin-right: 20px;
+    box-shadow: 0px 15px 30px rgba(25, 31, 61, 0.1);
+        border-radius: 10px;
+        background: #ffffff;
 }
 
 .link{
     display: flex;
     align-items: center;
     padding: 10px;
-    background: #ffffff;
-    position: relative;
-    box-shadow: 0px 15px 30px rgba(25, 31, 61, 0.1);
-    border-radius: 10px;
+    
 }
 
-.link::before{
-    content: '';
-    width: 33px;
-    height: 33px;
-    display: block;
+.img{
     margin-right: 10px;
-}
-
-.link.main::before{
-    content: url(../../images/link.svg);
-}
-.link.portfolio::before {
-    content: url(../../images/livros.svg);
-}
-.link.about::before {
-    content: url(../../images/music.svg);
-}
-.link.contents::before {
-    content: url(../../images/video.svg);
 }
