--- a/src/Component/Header/Header.module.css
+++ b/src/Component/Header/Header.module.css
@@ -2,7 +2,7 @@
   position: relative;
   background: #495eca;
   width: 100%;
-  height: 231px;
+  height: 265px;
   overflow: hidden;
 }
 .imgPhoto {
@@ -68,7 +68,7 @@
   width: 100%;
   height: 67px;
   left: 0px;
-  top: 200px;
+  bottom:0;
 
   background: #fafeff;
   border-radius: 30px 30px 0px 0px;
